 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res/org.thyee.freedomride.client.view"
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
     android:background="@color/black">
     <LinearLayout
         android:id="@+id/right_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
         android:orientation="horizontal" >
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical" >
         </LinearLayout>
         <LinearLayout
             android:layout_width="200dp"
             android:layout_height="match_parent"
    		android:background="@color/black"
             android:orientation="vertical" >
              <RelativeLayout
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			    	android:layout_weight="8.6"
			    	android:gravity="top"
			    	android:background="@drawable/right_half_header_shape"
			        >
			    </RelativeLayout >
             <ListView 
                 android:id="@+id/detail_listView"
                 android:background="@color/white"
                 android:layout_weight="2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
    			  android:cacheColorHint="@color/white"
                 >
                 
             </ListView>
             <RelativeLayout 
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			   	android:layout_weight="8.2"
			   	android:background="@drawable/right_half_footer_shape"
			   	android:gravity="bottom">
			
			</RelativeLayout>
         </LinearLayout>
         
     </LinearLayout>
	<org.thyee.freedomride.client.view.base.ScrollLayout
	    android:id="@+id/main_layout"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" 
	    android:orientation="vertical">
	
	    <RelativeLayout     
	        android:id="@+id/strategy_header"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	    	android:layout_weight="8.6"
	    	android:gravity="top"
	    	android:background="@drawable/left_half_header_shape"
	        >
	        <TextView 
	            android:layout_height="match_parent"
	            android:layout_width="match_parent"
	            android:text="@string/strategy"
	            android:textSize="16sp"
	            android:textColor="@color/white"
	            android:gravity="center"
	            android:layout_centerInParent="true"/>
	        <ImageButton 
	            android:id="@+id/strategy_detail"
	            android:layout_height="30dp"
	            android:layout_width="30dp"
	            android:layout_alignParentRight="true"
	            android:background="@drawable/strategy_detail_btn"
	            android:gravity="right"/>
	    </RelativeLayout >
		<RelativeLayout 
		    android:id="@+id/strategy_content"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="2"    		
	    	android:orientation="vertical"
	    	android:background="@color/index_bg">
	        <LinearLayout 
	            android:id="@+id/search_bar"
	        	android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_alignParentTop="true"
	    		android:background="@color/index_bg"
	    		android:orientation="horizontal">
	             <TextView 
	                android:id="@+id/choose_city"
		        	android:layout_width="wrap_content"
		        	android:layout_weight="2.5"
		    		android:layout_height="wrap_content"
		    		android:gravity="center"
		    		android:clickable="true"
		    		android:textColor="@color/dack_blue"
		    		android:text="@string/choose_city"
	                />         
	            <TextView 
	                android:id="@+id/choose_type"
		        	android:layout_width="wrap_content"
		        	android:layout_weight="2.5"
		    		android:gravity="center"
		    		android:textColor="@color/dack_blue"
		    		android:layout_height="wrap_content"
		    		android:text="@string/choose_type"
	                />
	    		<TextView    
	                android:id="@+id/strategy_length"
		        	android:layout_width="wrap_content"
		        	android:layout_weight="3"
		    		android:gravity="center"
		    		android:textColor="@color/dack_blue"
		    		android:layout_height="wrap_content"
		    		android:text="@string/strateyge_default_len"
	                />      
	            <ImageButton 
	            	android:id="@+id/strategy_search"
		        	android:layout_width="20dp"
		    		android:gravity="center"
		    		android:layout_height="20dp"
		    		android:background="@drawable/strategy_search_btn"
	                />
	        </LinearLayout>
	        <RelativeLayout 
	            android:id="@+id/refresh_bar"
	            android:layout_width="match_parent"
	            android:layout_height="20dp"
	            android:orientation="horizontal"
	            android:visibility="gone">
	            <ProgressBar android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  style="?android:attr/progressBarStyleSmall"
				  android:layout_alignParentRight="true"
				  android:layout_gravity="center"
				  android:id="@+id/head_progressBar"
  					></ProgressBar>
	        </RelativeLayout>
	        <LinearLayout 
	        	android:layout_width="match_parent"
	    		android:layout_height="match_parent"
	    		android:orientation="vertical"
	    		android:layout_below="@id/search_bar"
	    		android:background="@color/white">
	           <com.baidu.mapapi.map.MapView android:id="@+id/strategy_map_view"
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:clickable="true" />
	            
	        </LinearLayout>
		</RelativeLayout>
		<include layout="@layout/half_footer"/>
	</org.thyee.freedomride.client.view.base.ScrollLayout>
</FrameLayout>